<resources>
    <string name="app_name">ИСЖ-mobile</string>
    <string name="app_tonn">(кг)</string>

    <string name="app_sample_text">Пример</string>
    <string name="app_sample_long_text">Пример среднего по длине текста</string>

    <string name="app_front_date">dd.MM.yyyy</string>
    <string name="app_back_date">yyyy-MM-dd</string>

    <string name="app_file_saved">Файл сохранен</string>
    <string name="app_file_not_saved">Не сохранено</string>
    <string name="app_is_draft">Черновик</string>

    <string name="app_date_template">__.__.____</string>
    <string name="app_gps_permission_denied">Для работы приложения необходимо разрешение на получение GPS координат</string>
    <string name="app_camera_permission_denied">Для работы приложения необходимо разрешение использование камеры</string>
    <string name="app_audio_permission_denied">Для работы приложения необходимо разрешение к файлам</string>
    <string name="logo_title">Министерство сельского хозяйства Республики Казахстан</string>
    <string name="administration">Администрирование</string>
    <string name="animal_counting">Учет животных</string>
    <string name="add_disease">Добавить запись</string>
    <string name="string_owner">Владелец</string>
    <string name="fill_all_fields">Заполните пожалуйста все поля!</string>
    <string name="non_correct_inj">Введите корректный ИНЖ!</string>
    <string name="non_correct_inj_fill_all_fields">Пожалуйста корректно заполните все поля!</string>
    <string name="success">Успешно добавлено!</string>
    <string name="unregister_success">Животное снят с учета!</string>
    <string name="krsText">КРС:</string>
    <string name="addAnimal">Добавить животного</string>
    <string name="owners">Владельцы</string>
    <string name="owner">Владелец</string>
    <string name="nextLevel">Следующий уровень</string>
    <string name="openDetail">Открыть детали</string>
    <string name="sickness">Болезнь</string>
    <string name="research">Исследование</string>
    <string name="prevention">Профилактика</string>
    <string name="deregister">Снятие</string>
    <string name="addAnimals">Добавить животных</string>
    <string name="comment">Примечание</string>
    <string name="commit">Комментарий</string>
    <string name="noData">Нет данных</string>
    <string name="inj">ИНЖ</string>
    <string name="inj_full">Индивидуальный номер животного</string>
    <string name="chooseOwners">Выберите владельца</string>
    <string name="chooseRegion">Выберите регион</string>

    <string name="Upon_new_data_was_found">По запросу, новых данных не обнаружено</string>
    <string name="select_an_animal">Чтобы пройти дальше сперва выберите животное.</string>
    <string name="search_empty">По вашему запросу нет данных!</string>
    <string name="search_text">Поиск</string>
    <string name="text_sickness">Заболевание</string>
    <string name="options_from_list">Выберите варианты из списка</string>
    <string name="make_choice">Сделайте выбор</string>
    <string name="save_text_dis">Сохранить</string>
    <string name="text_doctor">Врач</string>
    <string name="scan_barcode">Отменить</string>
    <string name="aboutAnimal">Сведение о животном</string>
    <string name="detailRegistration">Постановка на учет</string>
    <string name="aboutImport">Об импорте</string>
    <string name="breedingAnimal">Племенное животное</string>
    <string name="numberRadio">Номер радиочастотной бирки</string>
    <string name="motherInj">ИНЖ матери</string>
    <string name="greenCorridor">Зеленый коридор / Выберите файл</string>
    <string name="bookNumber">Номер книги</string>
    <string name="NumberPage">Номер страницы</string>
    <string name="inn">ИНН/БИН</string>
    <string name="scannerText">Сканировать штрихкод</string>
    <string name="fio">ФИО</string>
    <string name="registeredAnimals">Реестр зарегистрированных животных</string>
    <string name="rvl">Реестр описей РВЛ</string>
    <string name="searchAnimals">Поиск животного</string>
    <string name="offlineUpload">Подгрузка оффлайн данных</string>

    <string name="top_sheet_behavior" translatable="false">beg </string>
    <string name="saveTo">Зарегистрировать</string>
    <string name="changeInj">Заменить ИНЖ</string>
    <string name="oldInj">Старый ИНЖ</string>
    <string name="access">Подтвердить</string>
    <string name="mogrations">Населенный пункт миграции</string>
    <string name="nextOwner">Следующий владелец</string>
    <string name="killingPlace">Место реализации (Обязательно)</string>
    <string name="animalsMigration">Миграция животного</string>
    <string name="chooseOrganization">Выберите организацию</string>
    <string name="addDeposit">Оформить залог</string>
    <string name="summDeposit">Сумма займа(тг)</string>
    <string name="contract">Прикрепить договор</string>
    <string name="chooseFile">Выбрать файл</string>
    <string name="contractNum">Номер договора</string>
    <string name="registrNum">Регистрационный номер</string>
    <string name="choosePledger">Выбрать заемщика</string>
    <string name="choosePledgeer">Выбрать залогодержателя</string>
    <string name="krs">КРС:</string>
    <string name="camels">Верблюды:</string>
    <string name="porks">Свиньи:</string>
    <string name="oneHoofed">Однокопытные:</string>
    <string name="horses">Лошади:</string>
    <string name="mrs">МРС:</string>
    <string name="animals_list">Список животных</string>
    <string name="add">Добавить запись</string>
    <string name="pork">Свиньи</string>
    <string name="addindivid">Добавить владельца</string>
    <string name="addInstruments">Добавить расходуемый материал</string>
    <string name="ok">Ок</string>
    <string name="docNumber">Номер документа</string>
    <string name="spentMaterials">Израсходованные материалы</string>
    <string name="clinicPicture">Клиническая картина</string>
    <string name="preDiagnosis">Предположительный диагноз</string>
    <string name="pathological">Данные патологического вскрытия</string>
    <string name="throwException">Направлен на исключение какой инфекции</string>
    <string name="pathologicalMaterials">Патологический материал</string>
    <string name="withSomebody">В присутствии</string>
    <string name="mainTitle">Главная</string>
</resources>