<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/bottomInstrumentsFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/ppkBlack"
        android:text="@string/options_from_list"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/instrumentsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <TextView
        android:id="@+id/instrumentsAddText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_padding"
        app:drawableStartCompat="@drawable/ic_add"
        android:text="@string/addInstruments"
        android:textColor="@color/ppkPrimary"
        android:textSize="@dimen/text_size"
        app:drawableTint="@color/ppkPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/instrumentsCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            style="@style/ISZHTheme.ButtonPrimary"
            android:text="@string/scan_barcode" />

        <Button
            android:id="@+id/instrumentsCreateSaveButton"
            style="@style/ISZHTheme.ButtonSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/save_text_dis"/>
    </LinearLayout>
</LinearLayout>