<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kz.putinbyte.iszhfermer.ui.menuAnimals.MenuAnimalsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/menuRegisteredAnimalsButton"
            style="@style/ISZHTheme.ButtonPrimary"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_marginTop="@dimen/item_margin"
            android:layout_marginEnd="@dimen/screen_padding"
            android:padding="@dimen/button_min_width"
            android:text="@string/registeredAnimals"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@id/menuRegisterRvlButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/menuRegisterRvlButton"
            style="@style/ISZHTheme.ButtonPrimary"
            android:layout_marginTop="@dimen/item_margin"
            android:padding="@dimen/button_min_width"
            android:text="@string/rvl"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="@id/menuRegisteredAnimalsButton"
            app:layout_constraintStart_toStartOf="@id/menuRegisteredAnimalsButton"
            app:layout_constraintTop_toBottomOf="@id/menuRegisteredAnimalsButton" />

        <Button
            android:id="@+id/menuSearchAnimalsButton"
            style="@style/ISZHTheme.ButtonPrimary"
            android:layout_marginTop="@dimen/item_margin"
            android:layout_marginBottom="@dimen/item_margin"
            android:padding="@dimen/button_min_width"
            android:text="@string/searchAnimals"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="@id/menuRegisterRvlButton"
            app:layout_constraintStart_toStartOf="@id/menuRegisterRvlButton"
            app:layout_constraintTop_toBottomOf="@id/menuRegisterRvlButton" />

        <Button
            android:id="@+id/menuOfflineButton"
            style="@style/ISZHTheme.ButtonPrimary"
            android:layout_marginTop="@dimen/item_margin"
            android:layout_marginBottom="@dimen/item_margin"
            android:padding="@dimen/button_min_width"
            android:text="@string/offlineUpload"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/menuSearchAnimalsButton"
            app:layout_constraintStart_toStartOf="@id/menuSearchAnimalsButton"
            app:layout_constraintTop_toBottomOf="@id/menuSearchAnimalsButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>