<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kz.putinbyte.iszhfermer.ui.animal.list.IszhListFragment">

    <kz.putinbyte.iszhfermer.ui.views.IszhSpinner
        android:id="@+id/listAnimalKindTypeSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/listRec"
        app:layout_constraintEnd_toEndOf="@+id/listRec"
        app:layout_constraintTop_toBottomOf="@+id/listGroupResearchButton"
        android:layout_marginTop="@dimen/text_margin"
        app:textTitleSpinner="Вид животных" />

    <Button
        android:id="@+id/listGroupSicknessesButton"
        style="@style/ISZHTheme.ButtonPrimary"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="@dimen/item_margin"
        android:layout_marginEnd="@dimen/item_margin"
        android:drawableStart="@drawable/ic_add"
        android:text="@string/sickness"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/listGroupDeregisterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listGroupResearchButton"
        style="@style/ISZHTheme.ButtonPrimary"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/item_margin"
        android:drawableStart="@drawable/ic_add"
        android:text="@string/research"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/listGroupDeregisterButton"
        app:layout_constraintStart_toStartOf="@+id/listGroupSicknessesButton"
        app:layout_constraintTop_toBottomOf="@+id/listGroupSicknessesButton" />

    <Button
        android:id="@+id/listGroupPreventionButton"
        style="@style/ISZHTheme.ButtonPrimary"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableStart="@drawable/ic_add"
        android:text="@string/prevention"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/listGroupDeregisterButton"
        app:layout_constraintStart_toStartOf="@+id/listGroupDeregisterButton"
        app:layout_constraintTop_toBottomOf="@+id/listGroupDeregisterButton" />

    <Button
        android:id="@+id/listGroupDeregisterButton"
        style="@style/ISZHTheme.ButtonPrimary"
        android:layout_marginEnd="@dimen/screen_padding"
        android:drawableStart="@drawable/ic_add"
        android:text="@string/deregister"
        android:visibility="gone"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@+id/listGroupSicknessesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listGroupResearchButton"
        app:layout_constraintTop_toTopOf="@+id/listGroupSicknessesButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listRec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginEnd="@dimen/screen_padding"
        android:clipToPadding="false"
        android:paddingTop="@dimen/button_roundness"
        app:layout_constraintBottom_toTopOf="@id/listCreateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listAnimalKindTypeSpinner"
        tools:listitem="@layout/item_iszh" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/item_margin"
        android:background="@drawable/rec_top_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listRec" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="@dimen/item_margin"
        android:background="@drawable/rec_bottom_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/listRec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/listCreateButton"
        style="@style/ISZHTheme.ButtonSelect"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginEnd="@dimen/screen_padding"
        android:layout_marginBottom="@dimen/item_margin"
        android:text="@string/addAnimals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>